--- a/destroy.yml
+++ b/destroy.yml
@@ -9,11 +9,12 @@
 
   tasks:
 
-    - name: Terminate every running instance in a region. Use with EXTREME caution.
-      ec2_instance:
-        state: absent
-        filters:
-          instance-state-name: "running"
+    #       Dangerous
+    # - name: Terminate every running instance in a region. Use with EXTREME caution.
+    #   ec2_instance:
+    #     state: absent
+    #     filters:
+    #       instance-state-name: "running"
           
     - name: Delete Key Pair
       ec2_key:
